--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -141,15 +141,15 @@ body {
 
             li.controls {
                 .material-icons {
-                    border: 1px solid transparent;
+                    border: 2px solid transparent;
                     border-radius: 50%;
-                    box-shadow: 0 0 0 1px @primary-color-light inset, 1px 1px 3px 2px @secondary-color inset;
+                    box-shadow: 0 0 0 1px @primary-color-light inset, 1px 1px 3px 2px @primary-color-light inset;
                     text-shadow: -1px -1px @secondary-color-light;
                     transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 
                     &:hover {
                         background-color: @primary-color-light;
-                        border: 1px inset @secondary-color;
+                        border: 2px inset @secondary-color;
                         border-radius: 50%;
                         box-shadow: 0 0 0 1px @primary-color-light inset, 1px 1px 3px 2px @secondary-color inset;
                         box-sizing: border-box;
