--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -147,6 +147,8 @@ body {
                     text-shadow: -1px -1px @secondary-color-light;
                     transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 
+                    .no-text-select;
+
                     &:hover {
                         background-color: @primary-color-light;
                         border: 2px inset @secondary-color;
@@ -165,6 +167,14 @@ body {
     #playListData {
         display: none;
     }
+}
+
+.no-text-select {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select:none;
+    user-select:none;
+    -o-user-select:none;
 }
 
 // Material-icons
