--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -177,6 +177,57 @@ html {
   visibility: visible;
 }
 @media only screen and (max-width: 719px) {
+  body main .contactUs {
+    border: 2px solid #34012f;
+    border-radius: 3px;
+    box-shadow: 0 2px 2px 0 rgba(52, 1, 47, 0.14), 0 3px 1px -2px rgba(52, 1, 47, 0.12), 0 1px 5px 0 rgba(52, 1, 47, 0.2);
+    font-size: 15px;
+    max-width: 300px;
+    margin: 20px auto auto auto;
+    padding: 0px 20px 0px 20px;
+  }
+  body main .contactUs h3 {
+    text-align: center;
+  }
+  body main .contactUs p {
+    text-align: left;
+  }
+  body main .contactUs ul.formWrapper {
+    list-style-type: none;
+    padding: 0px;
+  }
+  body main .contactUs ul.formWrapper li {
+    align-items: flex-start;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px 0px;
+  }
+  body main .contactUs ul.formWrapper li label {
+    margin-bottom: 10px;
+  }
+  body main .contactUs ul.formWrapper li label,
+  body main .contactUs ul.formWrapper li input,
+  body main .contactUs ul.formWrapper li textarea {
+    flex: 1 0 220px;
+    margin-left: auto;
+  }
+  body main .contactUs ul.formWrapper #formSubmit {
+    background: #34012f;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    color: #f2f2f2;
+    margin-left: auto;
+    margin-top: 10px;
+    max-width: 355px;
+    padding: 8px 16px;
+    text-transform: uppercase;
+    transition: color 0.3s ease-in-out;
+  }
+  body main .contactUs ul.formWrapper #formSubmit:hover {
+    color: #efdf00;
+    transition: color 0.3s ease-in-out;
+  }
   body main .playList .trackList {
     max-height: 435px;
     overflow-y: auto;
@@ -209,20 +260,24 @@ html {
   body main .playList li.playList-header .albumTitle {
     flex: 0 1 20%;
     text-align: center;
+    font-size: 13px;
   }
   body main .playList li.playList-header .artistTitle {
     flex: 1 1 10%;
     text-align: center;
+    font-size: 13px;
   }
   body main .playList li.playList-header .songDuration {
     flex: 0 1 auto;
     order: 4;
     text-align: right;
+    font-size: 13px;
   }
   body main .playList li.playList-header .songTitle {
     flex: 0 0 37%;
     flex-direction: row;
     text-align: left;
+    font-size: 13px;
   }
   body main .playList li.playList-footer {
     text-align: center;
@@ -250,6 +305,66 @@ html {
   }
 }
 @media only screen and (min-width: 720px) {
+  body main .contactUs {
+    border: 2px solid #34012f;
+    border-radius: 3px;
+    box-shadow: 0 2px 2px 0 rgba(52, 1, 47, 0.14), 0 3px 1px -2px rgba(52, 1, 47, 0.12), 0 1px 5px 0 rgba(52, 1, 47, 0.2);
+    font-size: 15px;
+    max-width: 500px;
+    margin: 20px auto auto auto;
+    padding: 0px 20px 0px 20px;
+  }
+  body main .contactUs h3 {
+    text-align: center;
+  }
+  body main .contactUs p {
+    text-align: left;
+  }
+  body main .contactUs ul.formWrapper {
+    list-style-type: none;
+    padding: 0px;
+  }
+  body main .contactUs ul.formWrapper li {
+    align-items: flex-start;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px 0px;
+  }
+  body main .contactUs ul.formWrapper li #formSubmit {
+    background: #34012f;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    color: #f2f2f2;
+    margin-left: auto;
+    margin-top: 10px;
+    max-width: 355px;
+    padding: 8px 16px;
+    text-transform: uppercase;
+    transition: color 0.3s ease-in-out;
+  }
+  body main .contactUs ul.formWrapper li #formSubmit:hover {
+    color: #efdf00;
+    transition: color 0.3s ease-in-out;
+  }
+  body main .contactUs ul.formWrapper li label,
+  body main .contactUs ul.formWrapper li input,
+  body main .contactUs ul.formWrapper li textarea {
+    flex: 1 0 130px;
+    max-width: 130px;
+  }
+  body main .contactUs ul.formWrapper li input,
+  body main .contactUs ul.formWrapper li textarea {
+    margin-left: auto;
+    flex: 1 0 350px;
+    max-width: 350px;
+  }
+  body main .contactUs ul.formWrapper li textarea {
+    flex-direction: column;
+    letter-spacing: normal;
+    word-spacing: normal;
+    border: none;
+  }
   body main .playList .trackList {
     max-height: 650px;
     overflow-y: auto;
