contactUs card is white now

--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -76,6 +76,12 @@ body {
         margin: auto;
         max-width: 1280px;
 
+        ul.playList div.trackList li.active {
+            &:hover {
+                border: 2px outset @primary-color;
+            }
+        }
+
         .playList {
             border-radius: 3px;
             background-color: @secondary-color;
@@ -235,6 +241,7 @@ html {
     body {
         main {
             .contactUs {
+                background: #FDFDFD;
                 border-radius: 3px;
                 border: 2px solid @secondary-color;
                 border-radius: 3px;
@@ -395,6 +402,7 @@ html {
     body {
         main {
             .contactUs {
+                background: #FDFDFD;
                 border-radius: 3px;
                 border: 2px solid @secondary-color;
                 border-radius: 3px;
