--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -47,6 +47,9 @@ body main {
   margin: auto;
   max-width: 1280px;
 }
+body main ul.playList div.trackList li.active:hover {
+  border: 2px outset #cbbe00;
+}
 body main .playList {
   background-color: #34012f;
   box-shadow: 0 2px 2px 0 rgba(203, 190, 0, 0.14), 0 3px 1px -2px rgba(203, 190, 0, 0.12), 0 1px 5px 0 rgba(203, 190, 0, 0.2);
@@ -178,6 +181,7 @@ html {
 }
 @media only screen and (max-width: 719px) {
   body main .contactUs {
+    background: #FDFDFD;
     border: 2px solid #34012f;
     border-radius: 3px;
     box-shadow: 0 2px 2px 0 rgba(52, 1, 47, 0.14), 0 3px 1px -2px rgba(52, 1, 47, 0.12), 0 1px 5px 0 rgba(52, 1, 47, 0.2);
@@ -306,6 +310,7 @@ html {
 }
 @media only screen and (min-width: 720px) {
   body main .contactUs {
+    background: #FDFDFD;
     border: 2px solid #34012f;
     border-radius: 3px;
     box-shadow: 0 2px 2px 0 rgba(52, 1, 47, 0.14), 0 3px 1px -2px rgba(52, 1, 47, 0.12), 0 1px 5px 0 rgba(52, 1, 47, 0.2);
