--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -277,6 +277,11 @@ html {
                             flex: 1 0 220px;
                             margin-left: auto;
                         }
+
+                        input, textarea {
+                            border: 1px solid #8e8e8e;
+                            padding: 3px;
+                        }
                     }
 
                     #formSubmit {
@@ -438,7 +443,7 @@ html {
                             color: #f2f2f2;
                             margin-left: auto;
                             margin-top: 10px;
-                            max-width: 355px;
+                            max-width: 350px;
                             padding: 8px 16px;
                             text-transform: uppercase;
                             transition: color 0.3s ease-in-out;
@@ -455,16 +460,17 @@ html {
                         }
 
                         input, textarea {
-                            margin-left: auto;
+                            border: 1px solid #8e8e8e;
                             flex: 1 0 350px;
+                            margin-left: auto;
                             max-width: 350px;
+                            padding: 3px;
                         }
 
                         textarea {
                             flex-direction: column;
                             letter-spacing: normal;
                             word-spacing: normal;
-                            border: none;
                         }
                     }
                 }
