--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -264,7 +264,7 @@ html {
                     padding: 0px;
 
                     li {
-                        align-items: flex-start;
+                        align-items: baseline;
                         display: flex;
                         flex-wrap: wrap;
                         margin: 20px 0px;
@@ -430,7 +430,7 @@ html {
                     padding: 0px;
 
                     li {
-                        align-items: flex-start;
+                        align-items: baseline;
                         display: flex;
                         flex-wrap: wrap;
                         margin: 20px 0px;
