submit button downsized

--- a/frontend/less/styles.less
+++ b/frontend/less/styles.less
@@ -291,8 +291,9 @@ html {
                         cursor: pointer;
                         color: #f2f2f2;
                         margin-left: auto;
+                        margin-right: auto;
                         margin-top: 10px;
-                        max-width: 355px;
+                        max-width: 150px;
                         padding: 8px 16px;
                         text-transform: uppercase;
                         transition: color 0.3s ease-in-out;
@@ -443,7 +444,7 @@ html {
                             color: #f2f2f2;
                             margin-left: auto;
                             margin-top: 10px;
-                            max-width: 350px;
+                            max-width: 150px;
                             padding: 8px 16px;
                             text-transform: uppercase;
                             transition: color 0.3s ease-in-out;
