--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -51,7 +51,7 @@ body main ul.playList div.trackList li.active:hover {
   border: 2px outset #cbbe00;
 }
 body main .playList {
-  background-color: #34012f;
+  background-color: #040e36;
   box-shadow: 0 2px 2px 0 rgba(203, 190, 0, 0.14), 0 3px 1px -2px rgba(203, 190, 0, 0.12), 0 1px 5px 0 rgba(203, 190, 0, 0.2);
   border: 2px solid #efdf00;
   border-radius: 3px;
@@ -64,7 +64,7 @@ body main .playList {
 body main .playList li {
   align-items: center;
   border: 2px outset #cbbe00;
-  box-shadow: 0 0 0 1px #34012f inset, 1px 1px 3px 2px #34012f inset;
+  box-shadow: 0 0 0 1px #040e36 inset, 1px 1px 3px 2px #040e36 inset;
   box-sizing: border-box;
   display: flex;
   flex: 0 1 auto;
@@ -89,20 +89,20 @@ body main .playList li:not(.playList-footer):not(.playList-header) {
 }
 body main .playList li:not(.playList-footer):not(.playList-header):hover {
   background-color: #cbbe00;
-  border: 2px dashed #34012f;
-  color: #34012f;
-  text-shadow: -1px -1px #66025c;
+  border: 2px dashed #040e36;
+  color: #040e36;
+  text-shadow: -1px -1px #071a66;
   transition: text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
 body main .playList li:not(.playList-footer):not(.playList-header):hover:not(.active) {
   animation: border-dance 1s infinite linear;
-  background: linear-gradient(90deg, #34012f 50%, #cbbe00 50%), linear-gradient(90deg, #34012f 50%, #cbbe00 50%), linear-gradient(0deg, #34012f 50%, #cbbe00 50%), linear-gradient(0deg, #34012f 50%, #cbbe00 50%);
+  background: linear-gradient(90deg, #040e36 50%, #cbbe00 50%), linear-gradient(90deg, #040e36 50%, #cbbe00 50%), linear-gradient(0deg, #040e36 50%, #cbbe00 50%), linear-gradient(0deg, #040e36 50%, #cbbe00 50%);
   background-color: #cbbe00;
   background-position: left top, right bottom, left bottom, right top;
   background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
   background-size: 15px 4px, 15px 3px, 4px 15px, 3px 15px;
   border: 2px solid #cbbe00;
-  color: #34012f;
+  color: #040e36;
 }
 body main .playList li div {
   box-sizing: border-box;
@@ -111,10 +111,10 @@ body main .playList li div {
 body main .playList li.active {
   background-color: #efdf00;
   border: 2px solid #cbbe00;
-  box-shadow: 0 0 0 1px #34012f inset, 1px 1px 3px 2px #34012f inset;
+  box-shadow: 0 0 0 1px #040e36 inset, 1px 1px 3px 2px #040e36 inset;
   box-sizing: border-box;
-  color: #34012f;
-  text-shadow: -1px -1px #66025c;
+  color: #040e36;
+  text-shadow: -1px -1px #071a66;
   transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
 body main .playList li.active:hover {
@@ -125,7 +125,7 @@ body main .playList li.playList-footer .material-icons {
   border-radius: 50%;
   box-shadow: 0 0 0 1px #efdf00 inset, 1px 1px 3px 2px #efdf00 inset;
   cursor: pointer;
-  text-shadow: -1px -1px #66025c;
+  text-shadow: -1px -1px #071a66;
   transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
   -moz-user-select: none;
   -webkit-user-select: none;
@@ -135,12 +135,12 @@ body main .playList li.playList-footer .material-icons {
 }
 body main .playList li.playList-footer .material-icons:hover {
   background-color: #efdf00;
-  border: 2px inset #34012f;
+  border: 2px inset #040e36;
   border-radius: 50%;
-  box-shadow: 0 0 0 1px #efdf00 inset, 1px 1px 3px 2px #34012f inset;
+  box-shadow: 0 0 0 1px #efdf00 inset, 1px 1px 3px 2px #040e36 inset;
   box-sizing: border-box;
-  color: #34012f;
-  text-shadow: -1px -1px #66025c;
+  color: #040e36;
+  text-shadow: -1px -1px #071a66;
   transition: box-shadow 0.6s ease-in-out, text-shadow 0.2s ease-in-out, border 0.2s ease-in-out, color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
 body #playListData {
@@ -182,9 +182,9 @@ html {
 @media only screen and (max-width: 719px) {
   body main .contactUs {
     background: #FDFDFD;
-    border: 2px solid #34012f;
+    border: 2px solid #040e36;
     border-radius: 3px;
-    box-shadow: 0 2px 2px 0 rgba(52, 1, 47, 0.14), 0 3px 1px -2px rgba(52, 1, 47, 0.12), 0 1px 5px 0 rgba(52, 1, 47, 0.2);
+    box-shadow: 0 2px 2px 0 rgba(4, 14, 54, 0.14), 0 3px 1px -2px rgba(4, 14, 54, 0.12), 0 1px 5px 0 rgba(4, 14, 54, 0.2);
     font-size: 15px;
     max-width: 300px;
     margin: 20px auto auto auto;
@@ -221,7 +221,7 @@ html {
     padding: 3px;
   }
   body main .contactUs ul.formWrapper #formSubmit {
-    background: #34012f;
+    background: #040e36;
     border: none;
     border-radius: 2px;
     cursor: pointer;
@@ -317,9 +317,9 @@ html {
 @media only screen and (min-width: 720px) {
   body main .contactUs {
     background: #FDFDFD;
-    border: 2px solid #34012f;
+    border: 2px solid #040e36;
     border-radius: 3px;
-    box-shadow: 0 2px 2px 0 rgba(52, 1, 47, 0.14), 0 3px 1px -2px rgba(52, 1, 47, 0.12), 0 1px 5px 0 rgba(52, 1, 47, 0.2);
+    box-shadow: 0 2px 2px 0 rgba(4, 14, 54, 0.14), 0 3px 1px -2px rgba(4, 14, 54, 0.12), 0 1px 5px 0 rgba(4, 14, 54, 0.2);
     font-size: 15px;
     max-width: 500px;
     margin: 20px auto auto auto;
@@ -342,7 +342,7 @@ html {
     margin: 20px 0px;
   }
   body main .contactUs ul.formWrapper li #formSubmit {
-    background: #34012f;
+    background: #040e36;
     border: none;
     border-radius: 2px;
     cursor: pointer;
